# Pandora_CPP

./: .gitignore  CMakeLists.txt  DESIGN_CONSIDERATIONS.md  HASH_IMPLEMENTATION_GUIDE.md  LICENSE  PANDORARV_MIGRATION_COMPLETED.md  PANDORARV_MIGRATION_PLAN.md  README.md  README_PANDORA_RV.md  UNIQUE_PTR_DESIGN.md
pandora/examples/: template_type_recognition_example.cpp
pandora/include/pandora/: data_adapter.h  diff_callback.h  diff_util.h  list_update_callback.h  logger.h  node.h  pandora_box_adapter.h  pandora_exception.h  pandora_rv.h  pandora_traits.h  real_data_set.h  transaction.h  type_visitor.h  wrapper_data_set.h
pandora/include/pandora/rv/: data_observer.h  data_set.h  data_vh_mapping_pool.h  i_reactive_view_holder.h  i_view_holder.h  pandora_data_set.h  pandora_real_rv_data_set.h  pandora_wrapper_rv_data_set.h  reactive_data.h  type_cell.h  view_holder_creator.h
pandora/tests/: Global.h  test_data_modification.cpp  test_diff_util.cpp  test_list_update_callback.cpp  test_pandora_rv.cpp  test_real_data_set.cpp  test_transaction_and_alias.cpp  test_wrapper_data_set.cpp
